src/index.css
@import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  /* border: 1px solid red; */
}

a {
  text-decoration: none;
  color: #fff;
}

html,
body {
  width: 100%;
  height: 100%;
}

body {
  background-color: black;
  color: white;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

button{
  border: unset;
}

nav {
  width: 100%;
  position: sticky;
  top: 0;
  display: flex;
  padding: 0.1rem 2.6vw;
  justify-content: space-between;
  z-index: 999;
  background-color: black;
  line-height: 3rem;
  transition-delay: 2s;
  transition-duration: 2s;
  transition: all;
}

.logo:hover{
  transform: rotate(360deg);
  transition-duration: 1s;
}

.nav_container{
  z-index: 999;
  display: block;
  text-align: center;
  height: 100vh;
  background-color: black;
  width: 100%;
  position: fixed;
  max-width: 100vw;
}

.nav_list_container{
  list-style-type: none;
  height: fit-content;
  overflow-x: hidden;
}

.nav_list_container li{
  color: #fff;
  font-size: 1.4rem;
  padding: 1.5rem 0;
  border-bottom: 1px solid green;
}

.nav_container a{
  width: 100vw;
}

.nav_list_container a:hover{
  transition-duration: 1s;
   color: green;

}

.hamburger {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 25px;
  width: 36px;
  cursor: pointer;
  transform: rotate(3.142rad)
}

.hamburger:hover > .line{
  width: 36px;
  transition-duration: 1s; 
}

.first {
  width :100%;
}

.second {
  width: 60%;
}

.third {
  width: 40%;
}

.cross-first{
  transform: rotate(45deg);
  position: relative;
  top: 0.2rem;
  left: 0.4rem;
}

.cross-second{
  transform: rotate(135deg);
  position: relative;
  bottom: 1rem;
  left: 0.5rem;
}

.line {
  height: 5px;
  background-color: white;
  border-radius: 2px;
}

.nav-btn{
  margin: auto 0;
}

#home {
  min-height: 100vh;
}

.main {
  display: grid;
  grid-template-columns: 4fr 1.5fr;
  margin-top: 3rem;
}

.home-1 {
  width: fit-content;
  height: fit-content;
  position: relative;
  left: 5vw;
}

.home-1 h1 {
  font-size: 90px;
  white-space: nowrap;
}

h1 span {
  color: green;
  font-size: 70px;
  font-family: Georgia, "Times New Roman", Times, serif;
}

.home-1 p {
  width: fit-content;
  font-size: clamp(1em, 4vw, 25px);
  opacity: 0.2;
  padding: 1rem 0 4rem 0;
  white-space: nowrap;
}

#home img {
  position: relative;
  top: 1rem;
  width: 100%;
  height: 100%;
}

.icons {
  font-size: 2.5rem;
  width: 20rem;
  justify-content: space-between;
  display: flex;
}

.fab:hover{
 color: green;
 transition: 1.2s;
}

.animate__animated.animate__fadeInUp {
  --animate-duration: 2.5s;
}

.animate__animated.animate__fadeInLeft {
  --animate-duration: 1.8s;
}

.home-2 {
  position: relative;
  width: 260px;
  height: 280px;
  right: 7vw;
}

#about {
  margin-bottom: 3rem;
}

#about h2 {
  font-family: "Caveat", cursive;
  font-size: 50px;
  text-align: center;
  white-space: nowrap;
  margin-top: 1.2rem;
  margin-bottom: 1.5rem;
}

.info {
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 98%;
}

.info-text {
  padding: 1rem;
}

.info-text > p {
  font-size: 1.8rem;
  text-align: center;
  font-family: "Caveat", cursive;
  margin-bottom: 3rem;
}

#about h3 {
  text-align: center;
  font-size: 200%;
  margin-bottom: 1.8rem;
}

.skills-list {
  list-style-type: none;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
}

.skills-list div {
  margin-bottom: 1rem;
  text-align: center;
}

.skills-list i {
  text-align: center;
  color: green;
  font-size: 2.4rem;
}

.skills-list span {
  text-align: center;
  font-size: 1.8vw;
}

.info-img-div {
  padding: 1rem;
  /* display: flex; */
  justify-content: center;
}
/* 
.info-img {
  width: 350px;
  height: 450px;
  border: 3px solid green;
} */

#projects {
  padding: 20px;
}

#projects h2 {
  text-align: center;
  font-family: "Caveat", cursive;
  font-size: 50px;
  margin-bottom: 3rem;
}

.project {
  border: 4px solid green;
  height: fit-content;
  padding: 1.5rem 2rem 1.5rem;
  border-radius: 10px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: fit-content;
}

.project-img {
  margin: auto;
  display: flex;
  width: 250px;
  height: 195px;
}

.projects-container {
  display: grid;
  width: 100%;
  gap: 15px;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
}


.project-title {
  font-size: 1.4rem;
  margin-top: 2rem;
  text-align: center;
}

.project-text {
  padding: 1rem 0.4rem 0 0.4rem;
  text-align: center;
  margin-bottom: 2rem;
}

.project_btn_div {
  margin: auto;
  display: flex;
  justify-content: space-around;
}

.project_btn_link button{
  border-radius: 5px;
  padding: 0.5rem 1.2rem;
  color: black;
  font-size: 0.9rem;
  cursor: pointer;
}

.project_btn_link button:hover{
  background-color: green;
  color: #fff;
}


.gh_link_wrapper{
  text-align: right;
  margin: 2rem 2rem 0 0;
}

.gh-btn{
  padding: 0.5rem 1.5rem;
  background-color: green;
  font-size: 1.3rem;
  border-radius: 10px;
  color: #fff;
  cursor: pointer;
}

#services {
  margin: auto;
  height: fit-content;
  text-align: center;
}

#services h2 {
  font-size: 4.5vw;
  font-family: "Caveat", cursive;
}

.services-container {
  display: flex;
  flex-wrap: wrap;
  margin: auto;
  justify-content: space-between;
  padding: 2rem;
  gap: 3vw;
  justify-content: center;
}

.service {
  border-radius: 30px;
  background-color: green;
  width: 350px;
  height: fit-content;
  min-height: 200px;
}

.service_text{
  padding: 1rem 1.5rem;
  font-size: 1.2rem;
}

.cover-img {
  display: flex;
  margin: auto;
  position: relative;
  top: 1rem;
  margin-bottom: 3rem;
  border-radius: 50px;
  width: 100px;
  height: 100px;
}

.service h4 {
  margin-bottom: 1rem;
  font-size: 1.4rem;
}

.service button {
  border-radius: 10px;
  padding: 0.5rem 1.5rem;
  margin-bottom: 1rem;
}
.service button a {
  color: black;
}

#contact {
  height: fit-content;
}

#contact h4 {
  text-align: center;
  font-size: 4vw;
  font-family: "Caveat", cursive;
}

.contact-container {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  padding: 2rem;
  justify-content: space-between;
}
.form-div {
  height: fit-content;
  width: 100%;
  flex: 1;
  margin: auto;
}

form {
  width: 90%;
  margin: auto;
  margin-top: 1.5rem;
  margin-bottom: 3rem;
  max-width: 100%;
}

.form-div h5 {
  font-size: clamp(150%, 4vw, 3rem);
  font-family: "Caveat", cursive;
  white-space: nowrap;
  text-align: center;
  padding: 1.2rem;
}

.row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.row .input-group {
  flex-basis: 48%;
}

.input-group {
  margin-bottom: 30px;
  position: relative;
}

input,
textarea {
  width: 100%;
  padding: 10px;
  outline: 0;
  border-radius: 0.2rem;
  border: unset;
  color: white;
  background: rgba(56, 55, 55, 0.493);
  font-size: 15px;
}

label {
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  padding: 10px;
  color: #fff;
  cursor: text;
  transition: 0.2s;
}

input:focus ~ label,
input:valid ~ label,
textarea:focus ~ label,
textarea:valid ~ label {
  top: -35px;
  font-size: 14px;
}

#submit-btn {
  padding: 10px 0;
  color: white;
  outline: none;
  background: transparent;
  border: 1px solid #fff;
  width: 100%;
  cursor: pointer;
}

#submit-btn:hover {
  background-color: rgb(190, 184, 184);
  transition-duration: 1s;
  color: black;
  font-weight: 700;
}

.other-div {
  flex: 1;
  background: url("../src/assets/Images/contact-bg.jpg");
  background-size: cover;
  border-radius: 3em;
}

.other-div h5 {
  font-family: "Caveat", cursive;
  margin-top: 1.5rem;
  text-align: center;
  font-size: 2.5rem;
}

.other-div div {
  display: flex;
  width: fit-content;
  position: relative;
  top: 3rem;
  left: 6rem;
}

.other-div p {
  padding: 1rem;
  font-size: 1.2rem;
}

.other-div span {
  opacity: 0.6;
}

.other-div i {
  font-size: 2.3rem;
  height: fit-content;
  margin: auto;
}

footer {
  background-color: green;
  padding: 0.6rem 0;
  text-align: center;
  width: 100%;
  height:fit-content;
  line-height: 1.2rem;
}

.visits{
 font-size: 0.9rem;
}

footer p {
  font-size: 1.2rem;
}

@media screen and (max-width: 1080px) {
  .projects-container {
    display: block;
    row-gap: 1rem;
  }
  .project {
    width: 100%;
    margin-bottom: 3rem;
  }
  .project-title {
    font-size: 1.6rem;
  }
  .project-info p {
    padding-right: 3px;
  }
}

@media screen and (max-width: 950px) {
  #home img {
    width: 80%;
    height: 80%;
  }
  #home h1 {
    font-size: 9vw;
  }

  .home-2 {
    right: 14%;
  }
  .info {
    width: 100%;
    grid-template-columns: none;
  }

  .info-img-div {
    display: none;
  }

  .skills-list span {
    font-size: 2.5vw;
  }

  .services-container {
    row-gap: 1rem;
  }

  .contact-container {
    display: block;
  }
  .other-div {
    display: none;
  }
}

@media screen and (max-width: 760px) {
  /* .nav-btn, */
  .menu-remove-bar {
    display: block;
    width: fit-content;
    height: fit-content;
    position: fixed;
    right: 2rem;
    top: 0.6rem;
  }
  .nav-btn > i,
  .menu-remove-bar > i {
    font-size: 2rem;
  }
  .full-nav ul {
    display: none;
  }
  .menu-list {
    background-color: black;
    opacity: 0.95;
    position: absolute;
    right: 0;
    left: 0;
    top: 0;
    height: 100vh;
    z-index: 1;
    text-align: center;
  }
  .menu-list ul {
    margin-top: 4rem;
  }
  .menu-list li {
    padding: 2rem;
    list-style: none;
    list-style-type: none;
  }
  .menu-list a {
    font-size: 2rem;
  }
  .menu-list a:hover {
    color: green;
  }
 
  #home h1{
    font-size: 11vw;
  }
  .home-2 {
    display: none;
  }
}

@media screen and (max-width: 620px) {

  #home h1{
    font-size: 5rem;
  }
  .service {
    width: 90%;
    margin: auto;
    margin-bottom: 1rem;
  }
  .service button {
    margin-bottom: 1rem;
  }
}

@media screen and (max-width: 575px) {
  #home h1{
    font-size: 16vw;
  }
  #about h2 {
    font-size: 8vw;
  }
  #project h2 {
    font-size: 10vw;
  }
  .project {
    display: block;
  }

  .project-img {
    margin-top: 1rem;
    width: 90%;
    height: 99%;
  }
  .project-text {
    margin: auto;
    margin: 0 1rem 0 1rem;
  }
  .row {
    display: block;
  }
}

@media screen and (max-width: 400px) {
  .project-img {
    width: 95%;
  }

  .img-div {
    display: flex;
    justify-content: center;
  }

  .icons {
    font-size: 2rem;
    width: 15rem;
  }
}

